# sidiff_agent

./: .gitignore  README.md  env_vllm.yaml  environment.yaml  pyproject.toml  setup.txt
helper_scripts/: collect_best_images.py  convert.py  find_missing_images.py  rewire.py  view_memory.py  vqa.py
scripts/: 1_qwen_image_base.py  2_qwen_image_fixed_negative.py  3_qwen_agents_base.py  4_qwen_agents_base_vnp.py  5_qwen_agents_base_vnp_memory.py  5_run.sh  main.py  main_negative_memory.py  main_negative_memory_multi.py  main_negative_multi_new.sh  main_negative_prompt.py  main_negative_prompt_multi.py  negative_multigpu.py  qwen_image_base.py  qwen_image_fixed_negative_prompt.py  run.sh  run_multi_gpu.sh  run_multi_gpu_memory.sh  utils.py
scripts/eval_benchmark/: DrawBench.txt  DrawBench_seed.txt  cool_sample.txt
scripts/eval_benchmark/GenAIBenchmark/: README.md  genai_image_seed.json  genai_skills.json
scripts/prompts/: system_prompts.py  system_prompts_memory.py
